force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <pluralLabel>Integration Logs</pluralLabel>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>INT-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks integration requests and responses for enrollment system synchronization.</description>
</CustomObject>