force-app/main/default/objects/Integration_Log__c/fields/Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Correlation_ID__c</fullName>
    <label>Correlation ID</label>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
    <description>Unique identifier for tracking related requests across systems. Used for correlating requests and responses.</description>
</CustomField>