force-app/main/default/objects/Integration_Log__c/fields/Enrollment_Request__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Request__c</fullName>
    <label>Enrollment Request</label>
    <type>Lookup</type>
    <referenceTo>Enrollment_Request__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <description>Link to the Enrollment Request that triggered this integration call.</description>
</CustomField>