force-app/main/default/objects/Integration_Log__c/fields/Next_Retry_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry_Time__c</fullName>
    <label>Next Retry Time</label>
    <type>DateTime</type>
    <description>Scheduled timestamp for the next retry attempt if the request failed and is eligible for retry.</description>
</CustomField>