force-app/main/default/objects/Integration_Log__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <label>Request Body</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Full request payload sent to the external system (JSON/XML).</description>
</CustomField>