force-app/main/default/objects/Integration_Log__c/fields/Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Time__c</fullName>
    <label>Request Time</label>
    <type>DateTime</type>
    <description>Timestamp when the request was sent to the external system.</description>
</CustomField>