force-app/main/default/objects/Integration_Log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <label>Response Body</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Full response payload received from the external system (JSON/XML).</description>
</CustomField>