force-app/main/default/objects/Integration_Log__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <label>Response Time</label>
    <type>DateTime</type>
    <description>Timestamp when the response was received from the external system.</description>
</CustomField>