force-app/main/default/objects/Integration_Log__c/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <label>System Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Name of the external system that received or sent this request (e.g., Billing System, Provider Management).</description>
</CustomField>